UDP server working

--- a/src/quadrotor_sim/enrico_mpc2_pk/src/Makefile
+++ b/src/quadrotor_sim/enrico_mpc2_pk/src/Makefile
@@ -3,34 +3,26 @@ CFLAGS = -pedantic -Werror -Wall -W -Wmissing-prototypes -Wstrict-prototypes -Wc
 
 LDFLAGS = -lm -ljson-c -lrt -lgsl -lgslcblas -lglpk
 
-default: mpc_ctrl
+default: all
 
 mpc_get_lib:
 	git clone https://github.com/ebni/MPC.git
 	cd MPC; \
 	make mpc.o; \
 	make dyn.o; \
+	make mpc_server; \
 	mv *.o ..; \
 	mv *.h ..; \
-	cd ..
-	rm -rf MPC
-
-#mpc.h: mpc_get_lib
-
-#mpc.o: mpc_get_lib
-#	gcc -c mpc.c -I$(INCLUDEDIR) $(CFLAGS) -o mpc.o
-
-#dyn.o: dyn.c dyn.h
-#	gcc -c dyn.c -I$(INCLUDEDIR) $(CFLAGS) -o dyn.o
-
-#mpc_ctrl: mpc_ctrl.o mpc.o dyn.o
-#	gcc mpc_ctrl.o mpc.o dyn.o -L$(LIBDIR) $(LDFLAGS) -o mpc_ctrl
+	mv mpc_server ..; \
+	cd ..;
 
 mpc_ctrl.o: mpc_ctrl.c mpc.h
 	gcc -c mpc_ctrl.c $(CFLAGS) -o mpc_ctrl.o
 
-mpc_ctrl: mpc_ctrl.o mpc.o
+mpc_ctrl: mpc_ctrl.o mpc.o mpc_ctrl.c
 	gcc mpc_ctrl.o mpc.o dyn.o $(LDFLAGS) -o mpc_ctrl
 
+all: mpc_ctrl mpc_server
+
 clean:
-	rm -rf mpc_ctrl *.o dyn.h mpc.h MPC
+	rm -rf mpc_ctrl mpc_server *.o dyn.h mpc.h MPC
